--- a/app/src/main/res/layout/item_odd.xml
+++ b/app/src/main/res/layout/item_odd.xml
@@ -5,48 +5,44 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_marginBottom="4dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:layout_marginTop="4dp"
     app:expWithParentScroll="true">
 
     <!-- The visible layout -->
     <RelativeLayout
-        android:id="@+id/firstLayer"
+        android:id="@+id/first_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#00bcd4">
 
         <ImageView
-            android:id="@+id/summoner_iv"
+            android:id="@+id/image_view"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_margin="5dp"
             android:contentDescription="@null"
             android:scaleType="fitXY"
-            android:src="@drawable/ezreal" />
+            android:src="@drawable/one" />
 
         <TextView
-            android:id="@+id/summoner"
+            android:id="@+id/text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/summoner_iv"
+            android:layout_toRightOf="@+id/image_view"
             android:text="@string/ezreal"
             android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/label"
+            android:id="@+id/show_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/summoner"
+            android:layout_below="@+id/text_view"
             android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="10dp"
-            android:layout_toRightOf="@+id/summoner_iv"
-            android:text="@string/ezreal_label"
+            android:layout_toRightOf="@+id/image_view"
+            android:text="Show description"
             android:textColor="@android:color/white" />
 
     </RelativeLayout>
@@ -56,12 +52,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@android:color/holo_green_dark"
         android:orientation="vertical"
         android:padding="10dp">
 
         <TextView
-            android:id="@+id/summoner_story_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ezreal_story"
