--- a/app/src/main/res/layout/item_even.xml
+++ b/app/src/main/res/layout/item_even.xml
@@ -32,13 +32,15 @@
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/label"
+            android:id="@+id/show_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/text_view"
             android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="10dp"
+            android:drawablePadding="5dp"
+            android:drawableRight="@drawable/arrow_down"
             android:layout_toRightOf="@+id/image_view"
             android:text="Show description"
             android:textColor="@android:color/white" />
