--- a/app/src/main/res/layout/item_odd.xml
+++ b/app/src/main/res/layout/item_odd.xml
@@ -42,6 +42,8 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="10dp"
             android:layout_toRightOf="@+id/image_view"
+            android:drawablePadding="5dp"
+            android:drawableRight="@drawable/arrow_down"
             android:text="Show description"
             android:textColor="@android:color/white" />
 
